<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <Button
        android:id="@+id/btn_broadcast"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/broadcast"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_receive"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/receive"
        android:textAllCaps="false" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:layout_marginTop="100dp"
        android:id="@+id/btn_exit"/>
</LinearLayout>