<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="100dp"
        android:text="@string/listen"
        android:id="@+id/buttonListen"
        android:gravity="center"/>

    <ProgressBar
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:id="@+id/spinnerListen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/messageContainer"
        android:orientation="vertical"
        android:visibility="invisible"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/received"
            android:gravity="center"
            android:textAllCaps="false" />
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:gravity="center"
            android:id="@+id/messageField"/>


    </LinearLayout>


</LinearLayout>
